# MiraTTS

./: README.md  pyproject.toml
docs/: SETUP_WINDOWS_CUDA.md
